--- a/hellossm/ src/ main/ resources/jdbc.properties
+++ b/hellossm/ src/ main/ resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/test?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8
 jdbc.username=root
-jdbc.password=ww327739288
+jdbc.password= *******
